refactor: 将 I18n 资源文件从 Resources 目录移动到 Assets 目录,并更新所有引用
- 将 UIText 资源文件及其本地化文件从 Resources/I18n 移动到 Assets/I18n
- 更新所有模块中的命名空间引用从 ReQuantum.Resources.I18n 改为 ReQuantum.Assets.I18n
- 移除资源文件中的 emoji 前缀,简化错误提示文本
- 删除空的 MenuItem.cs 文件
- 更新项目文件中的资源文件路径配置
- 修正 EventPublisher 中的泛型参数命名

--- a/ReQuantum/ReQuantum.csproj
+++ b/ReQuantum/ReQuantum.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Resources\I18n\UIText.Designer.cs">
+    <Compile Update="Assets\I18n\UIText.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>UIText.resx</DependentUpon>
@@ -61,7 +61,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Resources\I18n\UIText.resx">
+    <EmbeddedResource Update="Assets\I18n\UIText.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>UIText.Designer.cs</LastGenOutput>
     </EmbeddedResource>
