--- a/ReQuantum/ReQuantum.csproj
+++ b/ReQuantum/ReQuantum.csproj
@@ -58,6 +58,9 @@
     <Compile Update="Modules\Dashboard\Presentations\DashboardView.axaml.cs">
       <DependentUpon>DashboardView.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Modules\MyNotes\Presentations\MyNotesView.axaml.cs">
+      <DependentUpon>MyNotesView.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
