feat: 完成了PTA二维码的获取，可获取到Base64编码并将其转换为Bitmap格式

--- a/ReQuantum/ReQuantum.csproj
+++ b/ReQuantum/ReQuantum.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
-    <PublishAOT>true</PublishAOT>
+    <PublishAOT>false</PublishAOT>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
   </PropertyGroup>
   
@@ -31,6 +31,7 @@
     <PackageReference Include="Microsoft.Data.Sqlite" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="Microsoft.Extensions.Logging" />
+    <PackageReference Include="Microsoft.Playwright" />
     <PackageReference Include="RelativeControl.Avalonia" />
     <PackageReference Include="Serilog" />
     <PackageReference Include="Serilog.Extensions.Logging" />
