--- a/ReQuantum.Desktop/ReQuantum.Desktop.csproj
+++ b/ReQuantum.Desktop/ReQuantum.Desktop.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-	<PublishAot>true</PublishAot>
+	<PublishAot>false</PublishAot>
     <!--If you are willing to use platform-specific APIs, use conditional compilation.
     See https://docs.avaloniaui.net/docs/guides/platforms/platform-specific-code/dotnet for more details.-->
     <TargetFramework>net10.0</TargetFramework>
